--- a/index.html
+++ b/index.html
@@ -14,25 +14,29 @@
 <body>
 
   <!-- Header -->
-
+  
   <header class="menu">
-    <div class="menu-left">
-      <a href="" class="link menu-1">Home</a>
-      <a href="" class="link menu-2">About</a>
-    </div>
+    <div class="menu__container">
+      <div class="menu-logo menu-1">
+        <h5>Raul Lima</h5>
+      </div>
 
-    <div class="menu-logo menu-3">
-      <h5>Raul Lima</h5>
-    </div>
+      <div>
+        <a href="" class="link menu-2">Quem sou eu?</a>
+        <a href="" class="link menu-3">O que eu desenvolvo?</a>
+        <a href="" class="link menu-4">Skills</a>
+        <a href="" class="link menu-5">Projetos</a>
+        <a href="" class="link menu-6">Experiência</a>
+      </div>
 
-    <div class="menu-right">
-      <a href="" class="link menu-4">Works</a>
-      <a href="" class="link menu-5">Get in touch</a>
-    </div>
+      <div class="">
+        <a href="" class="menu-7 btn-primary">Contato</a>
+      </div>
+  </div>
   </header>
 
   <!-- background hero -->
-  <div class="relative">
+  <!-- <div class="relative">
     <div class="bg-hero">
       <svg class="svg-hero" viewBox="0 0 2560 1440" fill="none" xmlns="http://www.w3.org/2000/svg">
         <g id="bg-hero" clip-path="url(#clip0)">
@@ -123,31 +127,40 @@
         </defs>
         </svg>      
     </div>
-  </div>
+  </div> -->
 
-  <section class="container hero">
-    <div class="container-item">
+  <section class="container">
+    <div class="container__hero">
+      <div class="container-item">
 
-      <div>
-        <h1>Raul Lima</h1>
-      </div>
+        <div>
+          <h1>Olá! <br> Sou o <span class="mask">Raul Lima</span></h1>
+        </div>
 
-      <div>
-        <h2 class="mask mt-7">Web Developer</h2>
-      </div>
+        <div>
+          <h2 class="mask mt-7 ml-3">UI Design</h2>
+        </div>
         
-      <div>
-        <h2 class="mask">UI Enthusiasm</h2>
+        <div>
+          <h2 class="mask ml-8">&</h2>
+        </div>
+
+        <div>
+          <h2 class="mask line typing-animation">Web Developer</h2>
+        </div>
+          
+        <div class="mt-3 container-item__text">
+          <h6>Sou responsável por dar vida ao seu projeto. Transformo design em páginas para a web com agilidade, qualidade e alta perfomance.</h6>
+        </div>
+
       </div>
 
-      <div class="icon-square">
-        <a href="" class="square">Works</a>
+      <div class="home__img">
+        <svg class="home__blob"viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+          <path fill="#e7dfdd" d="M49.3,-64.7C59.3,-50.4,59.5,-30.5,60.9,-12.3C62.3,6,64.9,22.5,60.5,39.4C56.1,56.4,44.6,73.8,29.2,78.7C13.8,83.6,-5.6,76,-18.5,65.1C-31.5,54.2,-38,40,-45.9,26.4C-53.7,12.9,-62.9,0.1,-64.6,-15C-66.2,-30.1,-60.3,-47.4,-48.2,-61.3C-36.2,-75.2,-18.1,-85.6,0.8,-86.6C19.7,-87.5,39.4,-79,49.3,-64.7Z" transform="translate(100 100)" />
+          <image class="home__blob-img" x="-30" y="20" xlink:href="assets/images/hero-img.png" alt="Raul Lima">
+        </svg>
       </div>
-
-    </div>
-
-    <div class="container-item">
-      <img src="assets/images/hero-img.jpg" alt="Raul Lima">
     </div>
   </section>
 
@@ -228,6 +241,16 @@
     opacity: 0,
   }, "-=0.8")
   .from(".menu-5", {
+    duration: 1,
+    y: -50,
+    opacity: 0,
+  }, "-=0.8")
+  .from(".menu-6", {
+    duration: 1,
+    y: -50,
+    opacity: 0,
+  }, "-=0.8")
+  .from(".menu-7", {
     duration: 1,
     y: -50,
     opacity: 0,
