--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
   <section class="container-secondary pt-7">
     <div class="container-secondary__person">
       <div class="person">
+
         <div class="person__content">
           <h2 >Quem sou eu?</h2>
           <p class="mt-4">Meu nome é Raul Lima, sou desenvolvedor Front-End desde 2020.</p>
@@ -181,9 +182,13 @@
               Nível intermediário.
               </p>
         </div>
+        
         <div class="person__image">
-          <img class="person__image--svg" src="assets/svg/who-i-am.svg" onload="SVGInject(this)" />
+          <div class="person__image--svg">
+            <img  src="assets/svg/who-i-am.svg" onload="SVGInject(this)" />
+          </div>
         </div>
+        
       </div>
 
       <div class="work mt-7">
